<resources>
    <string name="app_name">ussc</string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="log_in_button_label">Log In</string>
    <string name="fullname_hint">Full Name</string>
    <string name="open">Open Camera</string>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="mainmenu">Student Service Center</string>
    <string name="lostandfound">Lost and Found</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="marketplace">MarketPlace</string>
    <string name="advising">Advising</string>

    <string name="edit">Edit</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="icon_home">home</string>
    <string name="icon_market">Marketplace</string>
    <string name="icon_lostandfound">Lost and Found</string>
    <string name="icon_advising">Advising</string>
    <string name="icon_chat">Chat</string>
    <string name="icon_profile">profile</string>
    <string name="image_title_update">image_title_update</string>

    <string name="login_error_message">Please enter an email address and password.</string>
    <string name="login_error_title">Error!</string>
    <string name="signup_invaild_email_message">Please enter a valid UMass Lowell email address.</string>
    <string name="signup_missing_image_message">Please submit a picture or image for your profile image.</string>
    <string name="signup_error_message">Please enter an email address and password.</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Log In.</string>

    <string name="add">Add</string>
    <string name="select">Select One</string>

    <!-- lost -->
    <string name="what_did_you">What did you lose?</string>
    <string name="tell_">Please tell us....</string>
    <string name="description">Description</string>
    <string name="desc_">Please describe what you lost in a few words....</string>

    <!-- marketplace -->
    <string name="what_are_you_s">What are you selling?</string>
    <string name="desc_sell">Please describe what are you selling in a few words....</string>
    <string name="price">Price</string>
    <string name="amount">amount</string>

    <!-- found -->
    <string name="what_did_you_f">What did you find?</string>
    <string name="desc_f">Please describe what you found in a few words....</string>

    <string name="reward">Reward</string>
    <string name="pricedollarsign">$</string>
    <string name="do_you">Do you have an image?</string>
    <string name="select_image">Select image</string>
    <string name="item">Item</string>

    <string name="conversations">Conversations</string>

    <style name="EditorFieldStyle">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:textAppearance">?android:textAppearanceMedium</item>
    </style>


</resources>
