<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.u.ussc.item_LostandFActivity">

    <!-- What did you lose -->
    <TextView
        android:id="@+id/lost_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/what_did_you"/>

    <EditText
        android:id="@+id/user_lost"
        android:hint="@string/tell_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:nextFocusDown="@+id/lost_what"/>

    <!-- describe -->
    <TextView
        android:id="@+id/describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/user_describe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_"
        android:textSize="20sp"
        android:inputType="textMultiLine"/>

    <!-- reward -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
    <TextView
        android:id="@+id/reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/reward"/>
    <EditText
        android:id="@+id/user_amount"
        android:hint="@string/pricedollarsign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
    </LinearLayout>

    <!-- UPLOAD IMAGE TEXT -->
    <TextView
        android:id="@+id/image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you" />

    <Button
        android:id="@+id/select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:onClick="openImageSelector"/>


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/item"
        android:rotation="90" />

</LinearLayout>
