<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_lostandfound"
        android:title="@string/icon_lostandfound"
        android:icon="@drawable/action_lostandf"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_market"
        android:title="@string/icon_market"
        android:icon="@drawable/action_market"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_advising"
        android:title="@string/icon_advising"
        android:icon="@drawable/action_advising"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_chat"
        android:title="@string/icon_chat"
        android:icon="@drawable/action_chat"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:title="@string/icon_profile"
        android:icon="@drawable/icon_profile"
        app:showAsAction="always" />


</menu>