<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".update_marketplace">
    <!-- What are you selling -->
    <TextView
        android:id="@+id/sel_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/what_are_you_s"/>

    <EditText
        android:id="@+id/user_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:nextFocusDown="@+id/sel_what"/>

    <!-- describe -->
    <TextView
        android:id="@+id/describe_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/user_describe_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/desc_sell"
        android:textSize="20sp"
        android:inputType="textMultiLine"/>

    <!-- price -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:id="@+id/price_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/price_sign"
            android:text="@string/pricedollarsign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/user_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="25sp"/>
    </LinearLayout>

    <!-- UPLOAD IMAGE TEXT -->

    <ImageView
        android:id="@+id/image_view_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item"
        android:rotation="90" />
</LinearLayout>