<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="90dp"
    android:orientation="vertical"
    tools:context="com.example.u.ussc.two_choicesActivity">


    <TextView
        android:id="@+id/mainmenu_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/select"
        android:textSize="30dp" />

    <Button
        android:id="@+id/lostandfound_1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/lost"
        android:textColor="@color/red"
        android:text="@string/lostandfound"/>

    <Button
        android:id="@+id/Marketplace_1"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cart"
        android:textColor="@color/white"
        android:text="@string/marketplace" />


</LinearLayout>
